<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint ="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:background="@drawable/song_border_style"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/songImage"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleX="1.2"
            android:scaleY="1.5"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="8dp"
            android:contentDescription="@string/Image"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <LinearLayout
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/songTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingBottom="5dp"
                android:paddingTop="10dp"
                android:text="@string/Title"
                android:textSize="8pt"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/songAuthor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingBottom="10dp"
                android:paddingTop="5dp"
                android:text="@string/Author"
                android:textColor="@android:color/darker_gray"
                android:textSize="8pt" />

        </LinearLayout>

        <ImageView
            android:id="@+id/customList_favIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="28dp"
            android:background="@android:drawable/ic_media_play"
            android:contentDescription="@string/play" />

    </LinearLayout>
</LinearLayout>
